--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,12 @@ a {
   right: 10px;
   bottom: 10px; }
   .ban img {
-    width: 60px; }
+    width: 55px; }
 
 .bg-black {
   background-color: #000; }
+
+.modal {
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.4); }
