--- a/scss/media.scss
+++ b/scss/media.scss
@@ -18,7 +18,7 @@
     .prev-girl, .next-girl {
         top: 101%;
     }
-    .modal-content{
+    .welcome{
         border: 1px solid #9f957f;
         background-image: url(../img/modal/bg.jpg);
         background-size: 142%;
