--- a/css/media.css
+++ b/css/media.css
@@ -10,8 +10,8 @@
     .slider-girl__slide:not(.slick-active) {
       filter: grayscale(1); }
   .prev-girl, .next-girl {
-    top: 127%; }
-  .modal-content {
+    top: 101%; }
+  .welcome {
     border: 1px solid #9f957f;
     background-image: url(../img/modal/bg.jpg);
     background-size: 142%;
