--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,9 @@ a {
 
 .prev-girl,
 .next-girl {
-  top: 145%; }
+  height: 55px;
+  width: 50px;
+  top: 152%; }
 
 .prev-girl {
   left: 0px; }
