--- a/css/mobile.css
+++ b/css/mobile.css
@@ -12,16 +12,32 @@
   padding: 45px 10px 45px 10px; }
 
 .shares {
-  padding-top: 215px;
+  background-image: none;
+  background-color: #000;
+  padding-top: 100px;
   background-position: center; }
   .shares__inner {
-    position: relative; }
+    position: relative;
+    transform: none;
+    top: auto; }
 
 .shares-slider__slide {
+  position: relative;
   width: 300px;
-  height: 300px; }
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .shares-slider__slide h3 {
+    text-align: center; }
+  .shares-slider__slide img {
+    position: absolute;
+    width: 150px;
+    left: -15px;
+    top: -15px; }
   .shares-slider__slide .btn {
-    width: 80%; }
+    width: 80%;
+    margin: 0 auto; }
 
 .servise {
   background-position-x: -785px; }
